@@ -48,9 +48,10 @@
   <li><a href="#38">38) My Album Art and / or Lyrics plugin is still not working!  What am I missing?</a></li>
   <li><a href="#39">39) Audacious now supports Qt on Windows, why doesn't Fauxdacious?</a></li>
   <li><a href="#40">40) How can I briefly override normal song-advance (next song, next shuffle, etc.) order in the currently-playing playlist to instead play one or more selected songs next?</a></li>
-  <li><a href="#41">41) What is this "Mini-Fauxdacious" plugin under General Plugins (Audacious doesn't offer this)?</a></li>
-  <li><a href="#42">42) How do I start Fauxdacious and load more than one playlist or split command-line entries into multiple playlists?</a></li>
-  <li><a href="#43">43) What are these "channel" images that appear in addition to the Album-art plugin image displayed?</a></li>
+  <li><a href="#41">41) *NEW!* How can I add a new entry, then jump directly to it next?</a></li>
+  <li><a href="#42">42) What is this "Mini-Fauxdacious" plugin under General Plugins (Audacious doesn't offer this)?</a></li>
+  <li><a href="#43">43) How do I start Fauxdacious and load more than one playlist or split command-line entries into multiple playlists?</a></li>
+  <li><a href="#44">44) What are these "channel" images that appear in addition to the Album-art plugin image displayed?</a></li>
 </ul>
 </span></td>
 </tr>
@@ -576,13 +577,19 @@ ogg/Vorbis, and wavpack files (previously only available for mp3 files)!  The mp
 <td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">There's a new checkbox under [File].[Settings].[Playlist] under "Fauxdacious Extras" labeled "Advance to next selected entry in list", and check it.&nbsp;  Then, in your currently-playing playlist, select (highlight) one or more other song-entries using [Ctrl]+mouse button 1.  Then either wait for current song to complete or manually advance with [&gt;&gt;|] (Next) button, and Fauxdacious will advance to the next selected (highlighted) song below (or wrap to the first one above if none REGARDLESS of whether the [Shuffle] or [Repeat] options are selected.&nbsp;  Play will then continue in top-to-bottom order through the highlighted entries until none but the currently-playing one remain highlighted.&nbsp;  At that point, normal advance rules again apply.&nbsp;  NOTE:&nbsp;  This does not affect the [|&lt;&lt;] (Previous) button as this advance rule only applies one-way!</span></td>
 </tr>
 <tr>
-<td align="left" valign="top" width="100%"><span id="41" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">41) What is this "Mini-Fauxdacious" plugin under General Plugins (Audacious doesn't offer this)?</span></td>
+<td align="left" valign="top" width="100%"><span id="41" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">41) <B>*NEW!*</B> How can I add a new entry, then jump directly to it next?</span></td>
+</tr>
+<tr>
+<td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">There's a new checkbox under [File].[Settings].[Playlist] under "Fauxdacious Extras" labeled "On add, select 1st entry added", and check both it AND the option just above it labeled "Advance to next selected entry in list".&nbsp;  You can then add a URL, file, directory, or list of files, and the URL, or the first file added will be selected (highlighted).&nbsp;  Assuming you haven't highlighted other entries (the currently-playing one is always highlighted), pressing [Next] ([&gt;&gt;] or [Alt-Down], or [Ctrl-B] in Mini-Fauxdacious will advance to your most-recently added entry.</span></td>
+</tr>
+<tr>
+<td align="left" valign="top" width="100%"><span id="42" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">42) What is this "Mini-Fauxdacious" plugin under General Plugins (Audacious doesn't offer this)?</span></td>
 </tr>
 <tr>
 <td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">It's a recently-added plugin to address <a style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;color:#B0B0B0;text-decoration:underline;" href="https://redmine.audacious-media-player.org/issues/1116" target="altwindow" rel="nofollow">Audacious feature request# 1116</a>.  It hides the "Info Bar" area (icon, song title, artist, album, and sound-meter graph normally along the bottom part of the main playlist window) and instead displays it as a separate but dockable window.&nbsp;  You can minimize/iconify/hide the main playlist window to effectively have just a "minimalist Fauxdacious" window displayed.&nbsp;  It accepts keyboard focus and includes keyboard shortcuts for volume-control and many of the basic playback-controls found in the playlist window itself for basic playback control even when the (larger) playlist window isn't visible.&nbsp;  It can also be docked to the playlist window (top or bottom) in lieu of the "Info Bar".&nbsp;  When displayed undocked, the Info Bar is hidden and the playlist expands downward to fill the space normally used by the Info Bar area allowing display of more song-entries.  It can also be invoked directly from the playlist window by double-clicking on the Info Bar area (or [Alt-[m]] in the playlist window).&nbsp;  This is also my answer to Audacious's new "Moonstone" minimalist interface option, which I do not include due to the current inability to access the menu or revert back to the default interface without exiting Audacious and manually editing your Audacious config. file!</span></td>
 </tr>
 <tr>
-<td align="left" valign="top" width="100%"><span id="42" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">42) How do I start Fauxdacious and load more than one playlist or split command-line entries into multiple playlists?</span></td>
+<td align="left" valign="top" width="100%"><span id="43" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">43) How do I start Fauxdacious and load more than one playlist or split command-line entries into multiple playlists?</span></td>
 </tr>
 <tr>
 <td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;"><B>*NEW!*</B>&nbsp;  Use the new Fauxdacious command-line option:&nbsp;  -a, --add-list, or --add-list="playlist name" one (or more) times between playlists or entries, for example:</span></td>
@@ -594,7 +601,7 @@ ogg/Vorbis, and wavpack files (previously only available for mp3 files)!  The mp
 <td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">This command would (depending on other playlist options) add <I>entry1</I> and <I>entry2</I> to the current (or a new "Now Playing") playlist, then create a new separate "New Playlist" playlist and load <I>entry3</I> and <I>entry4</I> into it.&nbsp;  A trailing "-a" (with no entries following it) will add an extra blank playlist tab.&nbsp;  Each new playlist created will have the default name "New Playlist" (unless it's subsequent entry is a playlist containing a playlist name).&nbsp;  If using the long form of the option, you can optionally include an argument specifying a playlist name to use (the default is "New Playlist").&nbsp;  This optional name is a default, but if the next entry is a playlist file containing a playlist title, then that will override any name specified here, as is normal when importing playlist files.</span></td>
 </tr>
 <tr>
-<td align="left" valign="top" width="100%"><span id="43" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">43) What are these "channel" images that appear in addition to the Album-art plugin image displayed?</span></td>
+<td align="left" valign="top" width="100%"><span id="44" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">44) What are these "channel" images that appear in addition to the Album-art plugin image displayed?</span></td>
 </tr>
 <tr>
 <td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">When playing a streaming radio station, podcast, or video, the URL-helper is often able to fetch both an image associated with the specific podcast or video and an image (usually an icon) associated with the "channel" producing the podcast or video.&nbsp;  In the case of streaming stations, this will be the streaming station's icon.&nbsp;  Normally, for streaming stations, the Album-art plugins will then fetch an album-cover for whatever song is currently playing on the station.&nbsp;  Fauxdacious allows displaying of both when the Album-art plugin is active.&nbsp;  The Album-art plugin (if active) will normally display the specific album-cover or the specific podcast / video image.&nbsp;  If this second image is also found, it is referred to as a "channel image" and will be displayed in the info-bar (or Mini-Fauxdacious, if active).</span></td>
